--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,36 +1,69 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color: darkslategrey;
-    /* display: flex;
+  background-color: #090a0a;
+  /* display: flex;
     flex-direction: column; */
 }
 
 .imgframe {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    text-align: center;
-    margin: 0 auto;
-    width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  margin: 0 auto;
+  width: 200px;
 }
 
 .imgframe img {
-    width: 100%;
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    margin: 0 auto;
+  width: 100%;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  margin: 0 auto;
 }
 
 canvas {
-    border: 10px solid black;
-    background-color: black;
-    margin: 30px;
+  border: 4px solid #b613cb;
+  background-color: black;
+  margin: 30px;
+  animation-name: stuff;
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes stuff {
+  0% {
+    border-color: #9b65e8;
+  }
+  12% {
+    border-color: #1f2a72;
+  }
+  28% {
+    border-color: #223285;
+  }
+  34% {
+    border-color: #83c040;
+  }
+  48% {
+    border-color: #d4ec8c;
+  }
+  63% {
+    border-color: #a0d882;
+  }
+  79% {
+    border-color: #f59477;
+  }
+  83% {
+    border-color: #1f2a72;
+  }
+  100% {
+    border-color: #df0fd7;
+  }
 }
